# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/scripts/: gendiff.py
tests/: test_generate.py
tests/fixtures/: result
